# esp32_attendance_system

./: CMakeLists.txt  esp32_attendance_system.code-workspace  partitions.csv  platformio.ini  platformio.ini.bak  sdkconfig.defaults  sdkconfig.esp32-s3-devkitm-1
components/auth/: CMakeLists.txt  auth.c
components/auth/include/: auth.h
components/db/: CMakeLists.txt  db.c  db_attendance.c  db_config.c  db_schema.c  db_students.c
components/db/include/: db.h
components/hid_rfid/: CMakeLists.txt  hid_rfid.c  idf_component.yml
components/hid_rfid/include/: hid_rfid.h
components/http_server/: CMakeLists.txt  api_admin.c  api_attendance.c  api_auth.c  api_classes.c  api_students.c  api_wifi.c  http_server.c  static_files.c  static_files.h
components/http_server/include/: http_server.h
components/sqlite3/: CMakeLists.txt  esp32.c
components/wifi_mgr/: CMakeLists.txt  wifi_mgr.c
components/wifi_mgr/include/: wifi_mgr.h
data/: admin.html  app.js  attendance.html  login.html  register.html  report.html  role-select.html  select-class.html  shared.css  student-detail.html  students.html  wifi-config.html
main/: CMakeLists.txt  main.c
scripts/: spiffs_upload.py
